--- a/package.json
+++ b/package.json
@@ -1,21 +1,16 @@
 {
-  "name": "hono-rest-api",
+  "name": "hono_rest_api",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node dist/src/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "@hono/node-server": "^1.13.0",
-    "@types/node": "^22.5.5",
-    "hono": "^4.6.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.2",
-    "xlsx": "^0.18.5"
+    "hono": "^2.x.x",
+    "@hono/node-server": "^2.x.x",
+    "xlsx": "^0.18.5",
+    "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "typescript": "^4.x.x"
   }
 }
